--- a/Assignment1/COMP371_Skeleton_code-master/Skeleton/VS_Solution/COMP371/COMP371/COMP371.vcxproj
+++ b/Assignment1/COMP371_Skeleton_code-master/Skeleton/VS_Solution/COMP371/COMP371/COMP371.vcxproj
@@ -116,6 +116,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="grid.hpp" />
     <ClInclude Include="objloader.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
