Added coloration to heightmap (in grayscale for now)

--- a/Assignment2/A2/Assignment2/Assignment2.vcxproj
+++ b/Assignment2/A2/Assignment2/Assignment2.vcxproj
@@ -131,8 +131,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\fragment.shader" />
-    <None Include="..\..\vertex.shader" />
+    <None Include="fragment.shader" />
+    <None Include="vertex.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
