--- a/Assignment2/A2/Assignment2/Assignment2.vcxproj
+++ b/Assignment2/A2/Assignment2/Assignment2.vcxproj
@@ -116,6 +116,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="objloader.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
