added CImg implementation

--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.hpp" />
+    <ClInclude Include="src\CImg.h" />
     <ClInclude Include="src\Light.hpp" />
     <ClInclude Include="src\Model.hpp" />
     <ClInclude Include="src\sceneLoader.hpp" />
