--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="src\Model.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\CImg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
