--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="src\CImg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Triangle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
