--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B3D74341-DAD4-49E0-97EE-2A5FAF152FA7}</ProjectGuid>
     <RootNamespace>Assignment3</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -122,6 +122,7 @@
     <ClInclude Include="src\Model.hpp" />
     <ClInclude Include="src\sceneLoader.hpp" />
     <ClInclude Include="src\Sphere.hpp" />
+    <ClInclude Include="src\Triangle.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
