Added Objectloader, and multiple lighitng support
Fixed low intensity of light

--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\SceneLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\objloader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\sceneLoader.hpp">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Triangle.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\objloader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
