--- a/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
+++ b/Assignment3/Code/Assignment3/Assignment3/Assignment3.vcxproj
@@ -113,6 +113,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Assignment3.cpp" />
+    <ClCompile Include="src\objloader.cpp" />
     <ClCompile Include="src\SceneLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +121,7 @@
     <ClInclude Include="src\CImg.h" />
     <ClInclude Include="src\Light.hpp" />
     <ClInclude Include="src\Model.hpp" />
+    <ClInclude Include="src\objloader.hpp" />
     <ClInclude Include="src\sceneLoader.hpp" />
     <ClInclude Include="src\Sphere.hpp" />
     <ClInclude Include="src\Triangle.hpp" />
